--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Inconsolata', monospace;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 nav{
     background-color: #44475B;
@@ -72,8 +73,20 @@ main{
 h1 {
     color: #87E1F5;
 }
+article {
+    border-left: #45485C solid 2px;
+    padding-left: 5px;
+    color: #FEFEF8;
+}
+.yellow-text {
+    color: #F0F88C;
+}
+.pink-text {
+    color: #ED75C5;
+}
 .reddit{
     grid-area: reddit;
+    overflow: hidden;
 }
 
 .history {
@@ -82,6 +95,10 @@ h1 {
 .clock {
     grid-area: clock;
     text-align: center;
+    font-size: 2rem;
+    justify-self: center;
+    align-self: center;
+
 }
 .github {
     grid-area: github;
